[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "nightly"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
x86_64 = "0.14.2"
volatile = "0.2.6"
spin = "0.5.2"
bit_field = "0.10.1"
bitflags = "1.2.1"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
format_no_std = "1.2.0"

# Freestanding binary
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
	"-display",
	"none",
]
test-success-exit-code = 33
